--- a/app/src/main/res/layout/activity_manual.xml
+++ b/app/src/main/res/layout/activity_manual.xml
@@ -6,6 +6,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:fitsSystemWindows="true" >
 
     <RelativeLayout
@@ -33,7 +34,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical" >
 
                 <!--     Table of contents lalagy diot       -->
@@ -45,43 +46,68 @@
                     android:gravity="center">
 
                     <ImageButton
+                        android:id="@+id/btnPrev"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/arrow_left2" />
+                        android:background="@drawable/arrow_left" />
 
                     <Button
+                        android:id="@+id/heading"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Welcome"
+                        android:textColor="@color/phinmaYellow"
                         android:layout_marginHorizontal="10dp"
                         android:backgroundTint="@color/phinmaGreen" />
 
                     <ImageButton
+                        android:id="@+id/btnNext"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/arrow_right" />
+                        android:background="@drawable/arrow_right2" />
                 </LinearLayout>
 
-                <!--     Header title       -->
                 <TextView
+                    android:id="@+id/pageNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Header text"
+                    android:text="Page 1"
                     android:fontFamily="@font/josefin_sans_bold"
-                    android:textSize="20sp"
+                    android:textSize="12sp"
+                    android:textColor="@color/black"
                     android:gravity="center"/>
 
+                <TextView
+                    android:id="@+id/subheading"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:text="subheader text"
+                    android:fontFamily="@font/josefin_sans_bold"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:gravity="center"/>
+
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginHorizontal="20dp" >
+
+                    <TextView
+                        android:id="@+id/content"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/merriweather_regular"
+                        android:text=""
+                        android:textColor="@color/black"/>
+                </ScrollView>
 
 
 
             </LinearLayout>
 
 
-
-
-
-
-            <!-- YOUR EXISTING CONTENT GOES HERE -->
 
         </FrameLayout>
 
