--- a/app/src/main/res/layout/activity_manual.xml
+++ b/app/src/main/res/layout/activity_manual.xml
@@ -56,6 +56,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Welcome"
+                        android:fontFamily="@font/josefinsans_bold"
                         android:textColor="@color/phinmaYellow"
                         android:layout_marginHorizontal="10dp"
                         android:backgroundTint="@color/phinmaGreen" />
@@ -91,7 +92,7 @@
                 <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginVertical="10dp"
                     android:layout_marginHorizontal="20dp" >
 
                     <TextView
