--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -12,6 +12,7 @@
         android:layout_height="80dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="4dp"
+        android:layout_gravity="center"
         android:layout_marginEnd="10dp"
         android:background="@color/phinmaYellow">
 
@@ -22,6 +23,8 @@
             android:gravity="center"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:fontFamily="@font/josefinsans_regular"
+            android:background="@color/phinmaYellow"
             android:textColor="@color/black" />
     </androidx.cardview.widget.CardView>
 
@@ -34,9 +37,11 @@
         app:cardElevation="4dp">
 
         <LinearLayout
+            android:id="@+id/eventDetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:background="@color/white"
             android:padding="16dp">
 
             <TextView
@@ -44,16 +49,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sample Event"
+                android:textColor="@color/black"
+                android:fontFamily="@font/josefinsans_bold"
                 android:textSize="16sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/eventType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sample Event"
+                android:fontFamily="@font/merriweather_regular"
+                android:textColor="@color/grey_font"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/eventDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Short description"
+                android:fontFamily="@font/merriweather_light"
                 android:textSize="14sp"
-                android:textColor="@color/grey_font" />
+                android:textColor="@color/black" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
