Refactor Event Details and Event List for Data Passing and Display
- Modified `activity_event_details.xml` to include TextViews for title, date/time, location, and description for displaying event details.
- Enhanced `EventDetails.kt` to fetch and display event details based on `eventId` and `eventType` passed from `EventList`.
- Implemented data passing between `EventList` and `EventDetails` using `putExtra` to include `EVENT_ID` and `EVENT_TYPE`.
- Updated `EventAdapter.kt` to pass `eventType` and `documentId` to the click listener, enabling the retrieval of correct event details.
- Updated `EventAdapter.kt` to include `documentId` to the event item.
- Refactored `EventList.kt` to handle `documentId` and `eventType` to accurately display and pass event data.
- Implemented filtering for past and upcoming events in `EventList.kt`.
- Modified `fetchAndDisplayEvents` in `EventList.kt` to use `getAllDocumentsWithIds` for fetching events along with their IDs.
- Updated `Event` data class to include an `id` field.
- Updated `EventList` to pass both the eventId and eventType to EventDetails.
- Added an error check in `EventDetails` if the data is missing.

--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -50,8 +50,38 @@
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Placeholder"
-                android:gravity="center" />
+                android:text="Title"
+                android:textColor="@color/black" />
+
+            <!--            OPTIONAL; FOR TESTING PURPOSES ONLY     -->
+<!--            <TextView-->
+<!--                android:id="@+id/eventId"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="ID"-->
+<!--                android:textColor="@color/black" />-->
+
+            <TextView
+                android:id="@+id/dateTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Date and Time"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Location"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Event Desciption"
+                android:textColor="@color/black" />
+
 
 
 
